2013-01-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement "Mark All Upgrades" GUI capability.

	* src/guimain.h (IDM_REPO_APPLY): Renumbered; make room for...
	(IDM_REPO_MARK_UPGRADES): ...this new constant; define it.

	* src/guidata.rc (IDM_REPO_MARK_UPGRADES): New option; add it...
	(ID_MAIN_WINDOW_WINDOW) [Installation]: ...to this drop-down menu.

	* src/pkgbase.h (pkgActionItem::SuppressRedundantUpgrades): New
	public inline method; declare it.

	* src/guiexec.cpp (AppWindowMaker::OnCommand):
	[IDM_REPO_MARK_UPGRADES]: Add case handler for this menu selection.
	(pkgActionItem::SuppressRedundantUpgrades): New method; implement it.

2013-01-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid unnecessary reloading of package list.

	* src/guiexec.cpp (AppWindowMaker::OnCommand) [IDM_REPO_APPLY]:
	Do not reload package list after processing; update it in place.

2013-01-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid potential heap corruption in action scheduler.

	* src/guiexec.cpp (pkgActionItem::Clear): Factor out; relocate to...
	* src/pkgexec.cpp (pkgActionItem::Clear): ...here; this keeps all use
	of new and delete operators on the same side of the EXE/DLL boundary
	as the constructor and destructor for pkgActionItem objects.
	(pkgActionItem::Schedule): Ensure that all min_wanted and max_wanted
	references are unique to each allocated pkgActionItem object, so that
	the destructor may safely release their associated heap memory blocks.

2013-01-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update copyright notification for development in new year.

	* configure.ac (YEARS_OF_ISSUE): Add year 2013.

	* Makefile.in (version.c, guidata.$OBJEXT): Make them depend on...
	(Makefile): ...this, so YEARS_OF_ISSUE propagates to built objects.

2012-12-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around a GUI action scheduling instability.
